# Water-Tweezer

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  codecov.yaml  config.default.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: python-checks.yml
alembic/: env.py
alembic/versions/: 2026_03_16_1647-288869b99ddb_create_user_settings.py  2026_03_24_1352-9780f7e372bd_add_reminder_table.py  2026_04_06_1231-c3802300c3be_add_water_intakes_table.py  2026_04_20_1953-dda540c9d638_change_user_id_from_int_to_big_int.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/hooks/: useApp.jsx
frontend/src/screens/: SettingsScreen.jsx  StatsScreen.jsx  TodayScreen.jsx
frontend/src/utils/: api.js
tests/: conftest.py  test_buttons.py  test_filters.py  test_scheduler.py
tests/test_commands/: test_base_command.py  test_callback_intake.py  test_callback_settings.py  test_survey_command.py
tests/test_water_bot/: conftest.py  test_buttons.py  test_filters.py  test_scheduler.py
tests/test_water_bot/test_commands/: test_base_command.py  (+3 more)
water_bot/: config.py  crud.py  database.py  filters.py  main.py  scheduler.py  schemas.py
water_bot/keyboards/: inline.py  reply.py
water_bot/models/: __init__.py  base.py  intake.py  reminder.py  users.py
water_bot/routers/: __init__.py
water_tweezer/core/: config.py  crud.py  database.py  schemas.py
water_tweezer/water_bot/: main.py  scheduler.py  survey_states.py
water_tweezer/web_app/: main.py  security.py
(+19 files in other folders)
