[project]
name = "water-tweezer"
version = "0.1.0"
description = "A telegram bot that reminds you to drink water"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "coverage>=7.13.4",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
warn_return_any = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_no_return = true
plugins = [
    "pydantic.mypy",
]
